--- a/kubernetes/infrastructure.yml
+++ b/kubernetes/infrastructure.yml
@@ -35,6 +35,7 @@ spec:
       containers:
       - name: activiti-cloud-sso-idm
         image: activiti/activiti-cloud-sso-idm:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8180
 ---
@@ -70,6 +71,7 @@ spec:
       containers:
         - name: activiti-cloud-gateway
           image: activiti/activiti-cloud-gateway:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 8080
 ---
@@ -92,6 +94,7 @@ spec:
       containers:
         - name: activiti-cloud-registry
           image: activiti/activiti-cloud-registry:latest
+          imagePullPolicy: Always
           ports:
           - containerPort: 8761
 ---
@@ -114,6 +117,7 @@ spec:
       containers:
         - name: activiti-cloud-audit
           image: activiti/activiti-cloud-audit:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 8181
           env:
