--- a/maven-runtime-bundle/pom.xml
+++ b/maven-runtime-bundle/pom.xml
@@ -10,10 +10,8 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
-    <version.activiti.cloud>7-201710-EA</version.activiti.cloud>
+    <version.activiti.cloud>7-201711-EA-salaboy_1524_remove_abstract_types-SNAPSHOT</version.activiti.cloud>
     <postgres.version>9.4.1212.jre7</postgres.version>
-    <spring.boot.version>2.0.0.M5</spring.boot.version>
-    <junit.version>4.12</junit.version>
 
     <!-- plugins -->
     <spring-boot-maven-plugin.version>1.5.4.RELEASE</spring-boot-maven-plugin.version>
@@ -31,14 +29,6 @@
         <scope>import</scope>
       </dependency>
 
-      <!-- Spring Boot -->
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring.boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
     </dependencies>
   </dependencyManagement>
 
