--- a/runtime-bundle-feign-client/pom.xml
+++ b/runtime-bundle-feign-client/pom.xml
@@ -10,9 +10,8 @@
   <version>1.0.0-SNAPSHOT</version>
 
   <properties>
-
-    <!-- plugins -->
     <spring-boot-maven-plugin.version>1.5.4.RELEASE</spring-boot-maven-plugin.version>
+    <swagger-core-version>1.5.15</swagger-core-version>
   </properties>
 
   <dependencyManagement>
@@ -40,15 +39,57 @@
       <groupId>org.springframework.cloud</groupId>
       <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
-    <!--<dependency>-->
-      <!--<groupId>org.springframework.security.oauth</groupId>-->
-      <!--<artifactId>spring-security-oauth2</artifactId>-->
-      <!--<version></version>-->
-    <!--</dependency>-->
     <dependency>
       <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-security</artifactId>
+      <artifactId>spring-cloud-starter-security</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-oauth2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security.oauth</groupId>
+      <artifactId>spring-security-oauth2</artifactId>
+      <version>2.2.1.BUILD-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-annotations</artifactId>
+      <version>${swagger-core-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp</groupId>
+      <artifactId>okhttp</artifactId>
+      <version>2.7.5</version>
+    </dependency>
+    <dependency>
+      <groupId>com.squareup.okhttp3</groupId>
+      <artifactId>logging-interceptor</artifactId>
+      <version>3.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.2</version>
+    </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.9.9</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.5.4</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <type>jar</type>
+      <version>1.1.0.Final</version>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -82,8 +123,6 @@
           </execution>
         </executions>
       </plugin>
-
-
     </plugins>
   </build>
 
