--- a/runtime-bundle-feign-client/pom.xml
+++ b/runtime-bundle-feign-client/pom.xml
@@ -11,6 +11,8 @@
 
   <properties>
     <spring-boot-maven-plugin.version>1.5.4.RELEASE</spring-boot-maven-plugin.version>
+    <!--remove property below once this is fixed-->
+    <!--https://github.com/swagger-api/swagger-codegen/issues/5410-->
     <swagger-core-version>1.5.15</swagger-core-version>
   </properties>
 
@@ -49,6 +51,8 @@
       <version>2.2.1.BUILD-SNAPSHOT</version>
     </dependency>
 
+    <!--remove dependencies below once this is fixed-->
+    <!--https://github.com/swagger-api/swagger-codegen/issues/5410-->
     <dependency>
       <groupId>io.swagger</groupId>
       <artifactId>swagger-annotations</artifactId>
