--- a/runtime-bundle-feign-client/pom.xml
+++ b/runtime-bundle-feign-client/pom.xml
@@ -94,17 +94,18 @@
     </dependency>
 
 
-    <dependency>
-      <groupId>org.keycloak</groupId>
-      <artifactId>keycloak-admin-client</artifactId>
-      <version>3.3.0.CR2</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.keycloak</groupId>-->
+      <!--<artifactId>keycloak-admin-client</artifactId>-->
+      <!--<version>3.3.0.CR2</version>-->
+    <!--</dependency>-->
 
-    <dependency>
-      <groupId>org.springframework.hateoas</groupId>
-      <artifactId>spring-hateoas</artifactId>
-      <version>0.24.0.BUILD-SNAPSHOT</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.hateoas</groupId>-->
+      <!--<artifactId>spring-hateoas</artifactId>-->
+      <!--<version>0.24.0.BUILD-SNAPSHOT</version>-->
+    <!--</dependency>-->
+
     <!--comment out, it prevents the boot to start-->
     <!--<dependency>-->
     <!--<groupId>com.fasterxml.jackson.core</groupId>-->
