--- a/trending-topic-campaigns/kubernetes/campaign-rb-activiti.yml
+++ b/trending-topic-campaigns/kubernetes/campaign-rb-activiti.yml
@@ -54,6 +54,13 @@ spec:
             initialDelaySeconds: 130
             timeoutSeconds: 3
             periodSeconds: 40
+          resources:
+            limits:
+              cpu: 1000m
+              memory: 1000Mi
+            requests:
+              cpu: 100m
+              memory: 400Mi
           imagePullPolicy: IfNotPresent
           env:
           - name: ACT_RB_HOST
@@ -80,6 +87,20 @@ spec:
             value: kube,local
           - name: JAVA_OPTS
             value: -Xmx256m -Xms256m
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: english-campaign-activiti
+  namespace: default
+spec:
+  maxReplicas: 3
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: v1
+    kind: Deployment
+    name: english-campaign-activiti
+  targetCPUUtilizationPercentage: 80
 ---
 apiVersion: v1
 kind: Service
