--- a/trending-topic-campaigns/kubernetes/connectors.yml
+++ b/trending-topic-campaigns/kubernetes/connectors.yml
@@ -31,6 +31,13 @@ spec:
             initialDelaySeconds: 130
             timeoutSeconds: 3
             periodSeconds: 40
+          resources:
+            limits:
+              cpu: 1000m
+              memory: 1000Mi
+            requests:
+              cpu: 100m
+              memory: 400Mi
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8084
@@ -45,6 +52,20 @@ spec:
             value: -Xmx256m -Xms256m
           - name: SPRING_PROFILES_ACTIVE
             value: kube,local
+---
+apiVersion: autoscaling/v1
+kind: HorizontalPodAutoscaler
+metadata:
+  name: activiti-cloud-connector-processing
+  namespace: default
+spec:
+  maxReplicas: 3
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: v1
+    kind: Deployment
+    name: activiti-cloud-connector-processing
+  targetCPUUtilizationPercentage: 80
 ---
 apiVersion: v1
 kind: Service
