--- a/trending-topic-campaigns/kubernetes/basic-infrastructure.yml
+++ b/trending-topic-campaigns/kubernetes/basic-infrastructure.yml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: rabbitmq
           image: rabbitmq:management
+          imagePullPolicy: IfNotPresent
           ports:
           - containerPort: 5672
           - containerPort: 15672
