--- a/trending-topic-campaigns/kubernetes/connectors.yml
+++ b/trending-topic-campaigns/kubernetes/connectors.yml
@@ -33,11 +33,11 @@ spec:
             periodSeconds: 40
           resources:
             limits:
-              cpu: 1000m
+              cpu: 1500m
               memory: 1000Mi
             requests:
               cpu: 100m
-              memory: 400Mi
+              memory: 300Mi
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8084
@@ -48,12 +48,14 @@ spec:
             value: "rabbitmq"
           - name: SPRING_APPLICATION_NAME
             value: "activiti-cloud-connector-processing"
+          - name: ANALYSIS_ENABLED
+            value: "true"
           - name: JAVA_OPTS
-            value: -Xmx256m -Xms256m
+            value: -Xmx512m -Xms256m
           - name: SPRING_PROFILES_ACTIVE
             value: kube,local
 ---
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
   name: activiti-cloud-connector-processing
@@ -65,7 +67,11 @@ spec:
     apiVersion: v1
     kind: Deployment
     name: activiti-cloud-connector-processing
-  targetCPUUtilizationPercentage: 80
+  metrics:
+  - type: Resource
+    resource:
+      name: memory
+      targetAverageValue: 0.45G
 ---
 apiVersion: v1
 kind: Service
@@ -103,16 +109,16 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8083
-            initialDelaySeconds: 130
-            timeoutSeconds: 3
-            periodSeconds: 40
+            initialDelaySeconds: 140
+            timeoutSeconds: 5
+            periodSeconds: 60
           livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8083
-            initialDelaySeconds: 130
-            timeoutSeconds: 3
-            periodSeconds: 40
+            initialDelaySeconds: 140
+            timeoutSeconds: 5
+            periodSeconds: 60
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8083
@@ -124,7 +130,7 @@ spec:
           - name: SPRING_APPLICATION_NAME
             value: "activiti-cloud-connector-ranking"
           - name: JAVA_OPTS
-            value: -Xmx64m -Xms64m
+            value: -Xmx128m -Xms64m
           - name: SPRING_PROFILES_ACTIVE
             value: kube,local
 ---
@@ -164,16 +170,16 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8082
-            initialDelaySeconds: 130
-            timeoutSeconds: 3
-            periodSeconds: 40
+            initialDelaySeconds: 140
+            timeoutSeconds: 5
+            periodSeconds: 60
           livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8082
-            initialDelaySeconds: 130
-            timeoutSeconds: 3
-            periodSeconds: 40
+            initialDelaySeconds: 140
+            timeoutSeconds: 5
+            periodSeconds: 60
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8082
@@ -193,7 +199,7 @@ spec:
 #          - name: TWITTER4J_OAUTH_ACCESSTOKENSECRET
 #            value: <TWITTER4J_OAUTH_ACCESSTOKENSECRET>
           - name: JAVA_OPTS
-            value: -Xmx64m -Xms64m
+            value: -Xmx128m -Xms64m
           - name: SPRING_PROFILES_ACTIVE
             value: kube,local
           - name: tweet_rate
@@ -235,16 +241,16 @@ spec:
             httpGet:
               path: /actuator/health
               port: 8085
-            initialDelaySeconds: 130
-            timeoutSeconds: 3
-            periodSeconds: 40
+            initialDelaySeconds: 140
+            timeoutSeconds: 5
+            periodSeconds: 60
           livenessProbe:
             httpGet:
               path: /actuator/health
               port: 8085
-            initialDelaySeconds: 130
-            timeoutSeconds: 3
-            periodSeconds: 40
+            initialDelaySeconds: 140
+            timeoutSeconds: 5
+            periodSeconds: 60
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8085
@@ -258,7 +264,7 @@ spec:
           - name: campaignCycle1_campaigns
             value: "activiti-en"
           - name: JAVA_OPTS
-            value: -Xmx64m -Xms64m
+            value: -Xmx128m -Xms64m
           - name: SPRING_PROFILES_ACTIVE
             value: kube,local
 ---
